--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-leaflet": "^1.2.2",
+    "react-redux": "^5.0.5",
+    "redux": "^3.6.0",
     "webpack": "^1.15.0",
     "webpack-dev-server": "^2.4.5"
   },
